chore: remove spring dependencies